@@ -25,7 +25,7 @@ const struct op string_binop2[] = {
 
 void testBug(void)
 {
-#if !defined(__SDCC_mcs51) && !defined(__SDCC_hc08) && !defined(__SDCC_s08) /* mcs51, hc08 and s08 have restrictions on function pointers wrt. reentrancy */
+#if !defined(__SDCC_mcs51) && !defined(__SDCC_ds390) && !defined(__SDCC_hc08) && !defined(__SDCC_s08) /* mcs51, hc08 and s08 have restrictions on function pointers wrt. reentrancy */
 	ASSERT(((int (*)(long, long))(string_binop1[0].op_func))(1, 1) == 0);
 	ASSERT(((int (*)(long, long))(string_binop1[0].op_func))(1, 2) == 1);
 	ASSERT(((int (*)(long, long))(string_binop2[0].op_func))(1, 1) == 0);
