@@ -1,3 +1,8 @@
+2017-10-08 Philipp Klaus Krause <pkk AT spth.de>
+
+	* support/regression/tests/bug-2663.c:
+	  Disable new function pointer test for ds390.
+
 2017-10-07 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/SDCCerr.c,
